# viberoom

./: .gitignore  CHANGELOG.md  LICENSE  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  fly.toml  pyproject.toml
backend/app/: agent.py  config.py  database.py  embeddings.py  main.py  models.py  schemas.py  vector_store.py
backend/scripts/: seed.py  test_agent.py  test_vectors.py
docs/: VibeRoom.postman_collection.json  VibeRoom.postman_environment.json  VibeRoom.postman_environment.prod.json
docs/screenshots/: .gitkeep
frontend/: Dockerfile  index.html  nginx.conf  package.json  vercel.json  vite.config.ts
frontend/src/: api.ts  index.css  main.tsx  types.ts
frontend/src/components/: Layout.tsx  ui.tsx
frontend/src/pages/: Create.tsx  Landing.tsx  Matches.tsx
