[project]
name = "backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.8",
    "fastapi>=0.136.1",
    "langchain>=1.2.17",
    "langchain-community>=0.4.1",
    "langchain-groq>=1.1.2",
    "langgraph>=1.1.10",
    "numpy>=2.4.4",
    "pydantic>=2.13.3",
    "pydantic-settings>=2.14.0",
    "python-dotenv>=1.2.2",
    "sentence-transformers>=5.4.1",
    "sqlalchemy>=2.0.49",
    "uvicorn[standard]>=0.46.0",
]
